<resources>
    <string name="app_name">Zoom Wroom</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_driver_home">Driver Map</string>
    <string name="complete">Complete</string>
    <string name="qr_display_hint">Please show this QR code to the driver.</string>
    <string name="rate_driver_positive_text">Great!</string>
    <string name="rate_driver_negative_text">Terrible.</string>
    <string name="confirm">Confirm</string>
    <string name="profile_title">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back">Back</string>

    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
  
    <string name="complete_request_title">Thanks for riding with</string>
    <string name="generate_qr_bucks_code">Generate QR Bucks Code</string>

    <string name="phone_title">Phone:</string>
    <string name="email_title">Email:</string>

    <string name="where_are_you_going">Where are you going?</string>
    <string name="from_where">From where?</string>
    <string name="fare_offered">Fare offered:</string>
    <string name="ride_complete">Ride complete</string>
    <string name="select_a_place">Select a place</string>

    <string name="places_api_key">AIzaSyArgWBF4boQ0d3WKEi82LFBU0G2qcyo-rw</string>
</resources>
