<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/DialogFragmentStyle">

    <TextView
        android:id="@+id/rate_driver_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="How did XXX do?"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/rate_driver_positive"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/thumbs_up_unsel"
            android:scaleType="fitXY"
            android:layout_marginEnd="30dp"/>

        <ImageView
            android:id="@+id/rate_driver_negative"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/thumbs_down_unsel"
            android:scaleType="fitXY" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/rate_driver_positive_text"
            android:layout_marginEnd="30dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/rate_driver_negative_text"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/rate_driver_complete_button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        style="@style/PrimaryButtonRegisterRider"
        android:layout_margin="20dp"/>


</LinearLayout>