<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccentPurple"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp" >

        <RelativeLayout
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_board">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:padding="3dp"
                android:background="@drawable/circle"
                android:src="@drawable/ic_person_outline_white_24dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/user_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="Full Name" />

            <TextView
                android:id="@+id/user_contact_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="sans-serif-light"
                android:text="username" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/Black1"
            android:textSize="32sp"
            android:text="@string/phone_title" />

        <TextView
            android:id="@+id/user_contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:clickable="true"
            android:text="phone number"
            android:textColor="@color/CyanBlueGreen"
            android:textSize="28sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorLightGray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textSize="32sp"
            android:textColor="@color/Black1"
            android:text="@string/email_title" />

        <TextView
            android:id="@+id/user_contact_email"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:clickable="true"
            android:text="email address"
            android:textColor="@color/CyanBlueGreen" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorLightGray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_contact_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-light"
            android:src="@drawable/thumbs_up_unsel" />
        <TextView
            android:id="@+id/user_contact_num_thumbs_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif-light"
            android:text="23"
            android:textSize="28sp"
            android:textColor="@color/Black1"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY"
            android:src="@drawable/thumbs_down_unsel" />
        <TextView
            android:id="@+id/user_contact_num_thumbs_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="23"
            android:fontFamily="sans-serif-light"
            android:textSize="28sp"
            android:textColor="@color/Black1" />

    </LinearLayout>

    <Button
        android:id="@+id/user_contact_back_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:text="@string/back"
        android:backgroundTint="@color/colorAccentPurple" />

</LinearLayout>