<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D5C68"
    tools:context=".UserProfileActivity">

    <RelativeLayout
        android:id="@+id/editpage_grad_layout"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/editpage_profile_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="@string/profile_title"
                android:textColor="@color/grey"
                android:textSize="45dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/editpage_profile_text_layout">

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/editpage_circle_board_layout"
                android:layout_width="wrap_content"
                android:background="@drawable/circle_board"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/editpage_imageView"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="10dp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/circle"
                            android:padding="3dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/ic_person_outline_white_24dp" />

                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginStart="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif-light"
                        android:text="username line"
                        android:textColor='@color/white'
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Full Name"
                        android:textColor="@color/white"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="user email"
                        android:textColor='@color/white'
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/profile_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="user phone number"
                        android:textColor='@color/white'
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/editpage_grad_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/editpage_rating_page_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_thumbs_up_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:fontFamily="sans-serif-light"
                android:src="@drawable/thumbs_up_unsel"
                android:textColor="@color/white"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/profile_num_thumbsup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="23"
                android:fontFamily="sans-serif-light"
                android:textSize="26sp"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/profile_thumbs_down_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:adjustViewBounds="true"
                android:fontFamily="sans-serif-light"
                android:scaleType="centerInside"
                android:src="@drawable/thumbs_down_unsel"
                android:textSize="25sp" />
            <TextView
                android:id="@+id/profile_num_thumbsdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="23"
                android:fontFamily="sans-serif-light"
                android:textSize="26sp"
                android:textColor="@color/white"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/profile_back_button"
                style="@style/ProfileButton"
                android:layout_above="@+id/profile_edit_button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="6dp"
                android:text="@string/back" />

            <Button
                android:id="@+id/profile_edit_button"
                style="@style/ProfileButton"
                android:layout_centerInParent="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:text="@string/edit_profile" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>